# horarium

./: Cargo.toml  Procfile  README.md
src/: db_operations.rs  main.rs  webscrape.rs
static/: manifest.json  service-worker.js  sitemap.xml
static/images/: browserconfig.xml
static/scripts/: analysis.js  main.js  timetable.js
static/scripts/jquery-ui-1.12.1.custom/: jquery-ui.min.js
static/styles/: main.scss
templates/: application_error.html.tera  index.html.tera  install_pwa.html.tera  layout.html.tera  logs.html.tera  not_available.html.tera  offline.html.tera  timetable.html.tera
