[package]
name = "horarium"
version = "0.1.0"
authors = ["cubetastic <cubetastic33@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.6"
reqwest = "0.9.22"
scraper = "0.11.0"
prettytable-rs = "0.8.0"
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", features = ["tera_templates"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4.9"
postgres = { version = "0.15", features = ["with-chrono"] }
